--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,14 @@
 <h1>Welcome to Josh's Blog</h1>
 <h2>The better Xanga</h2>
 
+<a href="/posts/new">Create New Post</a>
+
 <% @posts.each do |post| %>
   <ul>
     <li><h3><%= post.title %></h3>
     <p><%= post.body %></p></li>
+    <span><%= link_to 'Delete', post_path(post.id),
+            data: {:confirm => 'Are you sure?'}, :method => :delete %></span>
   </ul>
 <% end %>
 
