Add routes to edit/update post

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,6 +9,7 @@
     <p><%= post.body %></p></li>
     <span><%= link_to 'Delete', post_path(post.id),
             data: {:confirm => 'Are you sure?'}, :method => :delete %></span>
+    <span><%= link_to 'Edit', edit_post_path(post) %>
   </ul>
 <% end %>
 
