Add screenshots and readme for railsy talk

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
   <body>
   <nav>
-    <a href='/'>JoshBlog</a>
+  <%= button_to "JoshBlog", root_path, method: :get %>
+    <!-- <a href='/'>JoshBlog</a> -->
   </nav>
     <%= yield %>
   </body>
